upgrade spring-boot to 2.6.8 + java 11, upgrade testing libs